# c_plus_plus

./: stl_lab_2
Bit changer/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
Bit changer/resources/src/: FileMenu.qml
Calculator/: .qml.qrc.swp  CMakeLists.txt  layer.cpp  layer.h  library.h  main.cpp  qml.qrc
Calculator/src/: Buttons.qml  Display.qml  Main.qml
Pet/: data.h.autosave  data_s.h  grad.xlsx  grad_price.xlsx  main.cpp  mainWindow.cpp  mainWindow.h  read  untitled1.pro.user.43fb716.4.9-pre1
course 2.1/deque/: deque.h  main.cpp
course 2.1/lab1/: main.cpp
course 2.1/lab7/: Array.cpp  CMakeLists.txt
course 2.1/lab_Qt_knopki/: main.cpp
course 2.1/lab_sdvig/: main.cpp
course 2.1/lab_template/: main.cpp
course 2.2/stl_lab_1/: calc.cpp  main.cpp
course 2.2/stl_lab_2/: main.cpp
course 2.2/stl_lab_3/: CMakeLists.txt  main.cpp  priority.cpp  recurs.cpp
course 2.2/stl_lab_4/: CMakeLists.txt  fact.cpp  main.cpp
course 2.2/stl_lab_5/: CMakeLists.txt  main.cpp
course 2.2/stl_lab_6/: CMakeLists.txt  figure.cpp  main.cpp  structs.cpp  unrepetable.cpp
course 2.2/stl_lab_7/: functor.cpp  main.cpp
course 2.2/stl_lab_8/: Circle.cpp  Shape.cpp  Shape.h  Square.cpp  Triangle.cpp  main.cpp  pi_number.cpp
cycle_FIFO/: main.cpp  myclass.h
daemon/: calc.c  main.cpp  mainCli.cpp
deque/: deque.cpp
lab2/: main.cpp
lab7/: main.cpp  train.cpp
lab_Qt_knopki/: MyButton.h
qt_pet/: CMakeLists.txt  main.cpp  task_m.cpp  task_m.h
radar/: CMakeLists.txt  README.md
radar/res/: qml.qrc  qrc.t
radar/res/qml/: CameraSign.qml  CarPopup.qml  CarPopupForm.ui.qml  MapModule.qml  Pointer.qml  PolyLine.qml  RouteBlock.qml  RouteBlockForm.ui.qml  SearchBlock.qml  SearchBlockForm.ui.qml  main.qml
radar/res/qml/modules/sliderModule/: Marker.qml  Watcher.qml  WatcherForm.ui.qml
radar/src/: database.cpp  database.h  main.cpp
sessionTerminal/: CMakeLists.txt
stl_lab_1/: calc.cpp  calc.h  main.cpp
stl_lab_2/: main.cpp
task_manager (forgotten)/: task_m.cpp
test3/: main.cpp
test3/resources/: qml.qrc
test3/resources/src/: Bits.qml
untitled1/: .clang-format  data_s.cpp  spec.xlsx  tableWidget.cpp  tableWidget.h  test1.xlsx  untitled1.pro
